# egohub

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  ENGINEERING_PLAN.md  ENGINEERING_REFACTOR_PLAN.md  LICENSE.txt  Makefile  README.md  README_DATASETS.md  TOOLS_DEVELOPMENT_PLAN.md  pixi.toml  pyproject.toml  pytest.ini  readme_datasets.md  ruff.toml
.github/workflows/: test.yml
backends/: base.py  hf.py
cli/: main.py
configs/: egodex.yaml
docs/: README_DATASETS.md
egohub/: __init__.py  camera_parameters.py  constants.py  datasets.py  hdf5_types.py  rerun_log_utils.py  schema.py  video_utils.py
egohub/adapters/: README.md  __init__.py  base.py  dataset_info.py  egodex.py
egohub/adapters/dummy_multi_view/: dummy_multi_view.py
egohub/adapters/egodex/: __init__.py  egodex.py
egohub/adapters/ho3d/: ho3d.py
egohub/adapters/hoi4d/: __init__.py  hoi4d.py  hoi4d_processor.py
egohub/backends/: __init__.py  base.py  foundationpose.py  hf.py  onepose.py  reconstruction_open3d.py  sam2_seg.py  spatracker.py  vggt_camdepth.py
egohub/cli/: encode_dataset.py  export_to_rerun.py  main.py  pretrain_policy.py  process_data.py  train_vae.py
egohub/configs/: hoi4d.yaml
egohub/constants/: __init__.py  canonical_skeleton.py  egodex_skeleton.py
egohub/exporters/: base.py  rerun.py  rerun_exporter.py
egohub/models/: encoders.py  policy_model.py  vae.py
egohub/processing/: __init__.py  hand.py  pose.py  skeleton.py  synchronization.py  video.py
egohub/tasks/: base.py  camera_depth.py  object_detection.py  object_pose_estimation.py  pose_estimation.py  reconstruction.py  run_uvd.py  segmentation.py  tracking.py  uvd.py
egohub/tools/: base.py  hf_tools.py
egohub/training/: objectives.py
egohub/transforms/: __init__.py  coordinates.py  pipeline.py
egohub/utils/: auto_setup.py  camera_parameters.py  checkpoints.py  rerun_log_utils.py
next/: package-lock.json  package.json
next/app/: globals.css  page.tsx
next/app/api/execute-workflow/: route.ts
next/app/api/save-workflow/: route.ts
next/components/: custom-node.tsx  dataset-analytics.tsx  dataset-overview.tsx  dataset-workspace.tsx  execution-monitor.tsx  node-palette.tsx  pipeline-builder.tsx  pipeline-config.ts  pipeline-designer.tsx  pipeline-editor.tsx  rerun-viewer.tsx  workflow-controls.tsx
next/components/nodes/: data-source-node.tsx  model-node.tsx  output-node.tsx  transform-node.tsx
scripts/adapters/: adapter_egodex.py  adapter_epic_kitchens.py
scripts/exporters/: export_to_rerun.py
tests/: README.md  conftest.py  test_adapters.py  test_backends.py  test_camera_parameters.py  test_cli.py  test_constants.py  test_coordinates.py  test_datasets.py  test_egodex_info.py  test_exporters.py  test_fixtures.py  test_models.py  test_objectives.py  test_processing.py  test_tasks.py  test_transforms.py
tests/test_constants/: test_canonical_skeleton_constants.yml
tests/unit/: test_coordinates.py
