[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egohub"
version = "0.1.0"
description = "A toolkit for egocentric data processing, conversion, and visualization."
authors = [{ name = "James Ball", email = "j.ball@surrey.ac.uk" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "h5py",
    "numpy==1.26.4",
    "opencv-python",
    "Pillow",
    "PyYAML",
    "rerun-sdk==0.16.0",
    "scipy",
    "timm",
    "torch",
    "transformers",
    "tqdm",
    "accelerate",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
full = [
    "open3d>=0.17.0",
]

[project.urls]
"Homepage" = "https://github.com/your-repo/egohub"
"Bug Tracker" = "https://github.com/your-repo/egohub/issues"

[project.scripts]
egohub = "egohub.cli.main:main"

[tool.setuptools.packages.find]
include = ["egohub*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 